--- a/src/app/module/term-conditions/term-conditions.component.html
+++ b/src/app/module/term-conditions/term-conditions.component.html
@@ -13,33 +13,33 @@
                 <div class="terms-content">
                     <div class="terms-text">
                         <h4>
-                            Please carefully go through these terms and conditions <b>(“Terms”)</b> available at </h4>
-                        <p> <a href="https://www.Teladent.com/company/privacy">https://www.Teladent.com/company/privacy </a> <b>(“Privacy Policy”)</b> before you decide to access the Website or avail the services made available on the Website by Teladent.
-                            These Terms and the Privacy Policy together constitute a legal agreement <b>(“Agreement”)</b> between you and Teladent in connection with your visit to the Website and your use of the Services (as defined below).
+                            Please carefully go through these terms and conditions (“Terms”) available at </h4>
+                        <p> <a href="https://www.Teladent.com/company/privacy">https://www.Teladent.com/company/privacy </a> (“Privacy Policy”) before you decide to access the Website or avail the services made available on the Website by Teladent.
+                            These Terms and the Privacy Policy together constitute a legal agreement (“Agreement”) between you and Teladent in connection with your visit to the Website and your use of the Services (as defined below).
                         </p>
 
                     </div>
                     <div class="terms-text">
                         <h4>The Agreement applies to you whether you are -</h4>
                         <p>A medical practitioner or health care provider (whether an individual professional or an organization) or similar institution wishing to be listed, or already listed, on the Website, including designated, authorized associates
-                            of such practitioners or institutions <b>(“Practitioner(s)”, “you” or “User”);</b> or</p>
+                            of such practitioners or institutions (“Practitioner(s)”, “you” or “User”); or</p>
                         <p>
-                            A patient, his/her representatives or affiliates, searching for Practitioners through the Website <b>(“End-User”, “you” or “User”);</b> or
+                            A patient, his/her representatives or affiliates, searching for Practitioners through the Website (“End-User”, “you” or “User”); or
                         </p>
                         <p>
-                            Otherwise a user of the Website <b>(“you” or “User”)</b>.
-                        </p>
-
-                        <p>
-                            This Agreement applies to those services made available by Teladent on the Website, which are offered free of charge to the Users <b>(“Services”)</b>, including the following:
+                            Otherwise a user of the Website (“you” or “User”).
                         </p>
 
                         <p>
-                            <b> For Practitioners:</b> Listing of Practitioners and their profiles and contact details, to be made available to the other Users and visitors to the Website;
+                            This Agreement applies to those services made available by Teladent on the Website, which are offered free of charge to the Users (“Services”), including the following:
                         </p>
 
                         <p>
-                            <b>For other Users:</b> Facility to
+                            For Practitioners: Listing of Practitioners and their profiles and contact details, to be made available to the other Users and visitors to the Website;
+                        </p>
+
+                        <p>
+                            For other Users: Facility to
 
                             <li>(i) create and maintain ‘Health Accounts’,</li>
                             <li>(ii) search for Practitioners by name, specialty, and geographical area, or any other criteria that may be developed and made available by Teladent, and
@@ -71,9 +71,11 @@
 
                         </p>
                         <p>
-                            <span><b>The Indian Contract Act, 1872, </b></span><br>
-                            <span><b>the (Indian) Information Technology Act, 2000, and</b></span><br>
-                            <span><b>the rules, regulations, guidelines and clarifications framed there under, including the (Indian) Information Technology (Reasonable Security Practices and Procedures and Sensitive Personal Information) Rules,</b></span>
+                            <span>The Indian Contract Act, 1872, </span><br>
+                            <span>the (Indian) Information Technology Act, 2000, and</span><br>
+                            <span>the rules, regulations, guidelines and clarifications framed there under, including the (Indian) Information Technology 
+                                (Reasonable Security Practices and Procedures and Sensitive Personal
+                                 Information) Rules,</span>
                         </p>
 
                     </div>
