--- a/src/app/module/index/index.component.css
+++ b/src/app/module/index/index.component.css
@@ -241,6 +241,21 @@ span.tt {
     .kk {
         width: 65%;
     }
+    .oo{
+    padding-left: 5%;
+    padding-top: 7%;
+    padding-bottom: 7%;
+    padding-right: 6%;
+    margin: auto;
+    width: 100%;
+}
+.bx{
+    box-shadow: unset;
+    padding: 0;
+}
+.bgimg3{
+    padding: 5%;
+}
     .content {
         padding: 0px 0 0;
     }
