--- a/src/app/module/assessment-result/assessment-result.component.html
+++ b/src/app/module/assessment-result/assessment-result.component.html
@@ -16,7 +16,7 @@
                         <h2>Thanks you for your response.
                         </h2>
 
-                        <p class="fcs lio">Below is you smile score and recommendation as per our analysis</p>
+                        <p class="fcs lio">Below is your Oral score and recommendation as per our analysis</p>
                     </div>
 
                 </div>
