--- a/src/app/module/assessment-result/assessment-result.component.css
+++ b/src/app/module/assessment-result/assessment-result.component.css
@@ -177,6 +177,12 @@ ul.obslist li {
     margin-bottom: 26px;
     margin-top: 10px;
 }
+.namediv h4 {
+    font-size: 24px!important;
+}
+.namediv p {
+    font-size: 14px!important;
+}
 
 
 /* media start here */
